# python-project1

./: .gitignore  README.md  camera_simulator_notebook.ipynb
.ipynb_checkpoints/: README-checkpoint.md  camera_simulator-checkpoint.ipynb
camera_simulator/: README.md  pyproject.toml  setup.py
camera_simulator/docs/source/: conf.py
camera_simulator/src/camera_simulator/: classes.py
camera_simulator/src/camera_simulator.egg-info/: SOURCES.txt  requires.txt
camera_simulator/tests/: test_lens.py
docker/: Dockerfile  requirements.txt  run.sh
package/: README.md  pyproject.toml  setup.py
package/camera_simulator/: classes.py
package/camera_simulator/camera_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
package/docs/source/: conf.py  index.rst
package/tests/: test_lens.py  test_sensor.py
